# dream-storage

./: CMakeLists.txt  README.md
src/: dstorage.cpp  dstorage.h  tokens.h
src/objects/: dstorageobjects.cpp  dstorageobjects.h
src/objects/buffer/: frombuffer.cpp  frombuffer.h  tobuffer.cpp  tobuffer.h
test/: main.cpp
